--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
   "last_session": {
-    "excel_path": "C:/Users/admin/Desktop/重构/regular错误示例.csv",
+    "excel_path": "C:/Users/admin/Desktop/重构/机台信息表.csv",
     "regular_output_dir": "C:/Users/admin/Desktop/重构/put",
     "issue_output_dir": "C:/Users/admin/Desktop/重构/put"
   },
