--- a/config/settings.json
+++ b/config/settings.json
@@ -14,16 +14,16 @@
     "No": "No#"
   },
   "regular_photo": {
-    "template_name": "{Build}_{Config}_{No}_{SN}_{Mode}_WF{WF}_{Test}_{CP}-{方向}",
-    "template_folder": "{Test}/{Config}/{Mode}/{No}",
+    "template_name": "{Build}_{Config}_{No}_{SN}_{Mode}_WF{WF}_{Test}{方向}_{CP}-{方向}",
+    "template_folder": "{Test}/{Test}{Config}/{SN}{Mode}/{No}{Config}{Mode}{WF}{No}{WF}",
     "parsed_data_map": {
       "CP": "CP",
       "O": "方向"
     }
   },
   "issue_photo": {
-    "template_name": "{Build}_{Config}_{No}_{SN}_{Mode}_{WF}-{Test}_{CP}-{Issue}",
-    "template_folder": "{Test}/{Config}/{Mode}/{No}",
+    "template_name": "{Build}_{Config}_{No}_{SN}_{Mode}{Config}_{WF}-{Test}_{CP}-{Issue}",
+    "template_folder": "{Test}/{Config}/{SN}{Mode}/{No}",
     "parsed_data_map": {
       "CP": "CP",
       "Issue": "Issue"
