--- a/config/settings.json
+++ b/config/settings.json
@@ -14,16 +14,16 @@
     "No": "No#"
   },
   "regular_photo": {
-    "template_name": "{Build}_{Config}_{No}_{SN}_{Mode}_WF{WF}_{Test}{方向}_{CP}-{方向}",
-    "template_folder": "{Test}/{Test}{Config}/{SN}{Mode}/{No}{Config}{Mode}{WF}{No}{WF}",
+    "template_name": "{No}_{SN}_{Config}_WF{WF}_{Test}_{CP}_{Orient}",
+    "template_folder": "WF{WF}_{Test}/{Config}/{No}_{SN}",
     "parsed_data_map": {
       "CP": "CP",
-      "O": "方向"
+      "O": "Orient"
     }
   },
   "issue_photo": {
-    "template_name": "{Build}_{Config}_{No}_{SN}_{Mode}{Config}_{WF}-{Test}_{CP}-{Issue}",
-    "template_folder": "{Test}/{Config}/{SN}{Mode}/{No}",
+    "template_name": "{No}_{SN}_{Config}_WF{WF}_{Test}_{CP}_{Issue}",
+    "template_folder": "WF{WF}_{Test}/{Config}/{No}_{SN}",
     "parsed_data_map": {
       "CP": "CP",
       "Issue": "Issue"
